fixed grid overlapping in mobile

--- a/SCSS/_mobile.scss
+++ b/SCSS/_mobile.scss
@@ -75,37 +75,7 @@
         // max-height: 30vh;
         height: calc(90dvw/1.94); //aspect ratio ~ 4:2
     }
-    .project-modal-header{
-        flex-direction: column;
-    }
-
-    .tiles-wrapper{
-        // overflow-y: auto;
-        display: flex;
-        flex-direction: column;
-    }
-
-    .tile{
-        padding: 0px;
-        min-height: fit-content;
-        justify-content: flex-start;
-    }
-
-    .overview{
-        grid-area: 1 / 1 / 2 / 2; 
-    }
-
-    .highlights{
-        grid-area: 2/ 1 / 3 / 2; 
-    }
-
-    .tools{
-        grid-area: 3 / 1 / 4 / 2 ;
-    }
-
-    .screenshot{
-        grid-area: 4 /1 / 5 / 2 ;
-    }
+    
 
     .links-ladscape{
         display: none;
@@ -400,7 +370,9 @@
     .project-modal-header{
         flex-direction: column;
         align-items: flex-start;
+        padding: 5px 1.5dvw
     }
+    
     .close-btn-wrapper{
         align-self: flex-start;
     }
@@ -434,6 +406,35 @@
         #bottom-bar{
           display: none
         }
+    }
+
+
+    .tiles-wrapper{
+        // overflow-y: auto;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .tile{
+        padding: 0px;
+        min-height: fit-content;
+        justify-content: flex-start;
+    }
+
+    .overview{
+        grid-area: 1 / 1 / 2 / 2; 
+    }
+
+    .highlights{
+        grid-area: 2/ 1 / 3 / 2; 
+    }
+
+    .tools{
+        grid-area: 3 / 1 / 4 / 2 ;
+    }
+
+    .screenshot{
+        grid-area: 4 /1 / 5 / 2 ;
     }
 }
 
