--- a/SCSS/main.css
+++ b/SCSS/main.css
@@ -1106,31 +1106,6 @@ body {
     margin-top: -10dvh;
     height: 46.3917525773dvw;
   }
-  .project-modal-header {
-    flex-direction: column;
-  }
-  .tiles-wrapper {
-    display: flex;
-    flex-direction: column;
-  }
-  .tile {
-    padding: 0px;
-    min-height: -moz-fit-content;
-    min-height: fit-content;
-    justify-content: flex-start;
-  }
-  .overview {
-    grid-area: 1/1/2/2;
-  }
-  .highlights {
-    grid-area: 2/1/3/2;
-  }
-  .tools {
-    grid-area: 3/1/4/2;
-  }
-  .screenshot {
-    grid-area: 4/1/5/2;
-  }
   .links-ladscape {
     display: none;
   }
@@ -1347,6 +1322,7 @@ body {
   .project-modal-header {
     flex-direction: column;
     align-items: flex-start;
+    padding: 5px 1.5dvw;
   }
   .close-btn-wrapper {
     align-self: flex-start;
@@ -1371,6 +1347,28 @@ body {
   }
   .active-navbar #bottom-bar {
     display: none;
+  }
+  .tiles-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+  .tile {
+    padding: 0px;
+    min-height: -moz-fit-content;
+    min-height: fit-content;
+    justify-content: flex-start;
+  }
+  .overview {
+    grid-area: 1/1/2/2;
+  }
+  .highlights {
+    grid-area: 2/1/3/2;
+  }
+  .tools {
+    grid-area: 3/1/4/2;
+  }
+  .screenshot {
+    grid-area: 4/1/5/2;
   }
 }
 /*Vertical Tablet*/
